--- a/app.json
+++ b/app.json
@@ -18,10 +18,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ashleybelle.mobileappjs"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f1f676d9-ec99-4fb3-afa8-f085e9930efa"
+      }
+    },
+    "plugins": [
+      "expo-build-properties"
+    ]
   }
 }
